fix: resolve header text being unreadable in some cases

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ header {
   display: flex;
   align-items: center;
   z-index: 10000;
-  background-color: transparent;
+  background-color: rgba(24, 24, 24, 0.3);
 }
 
 .menu-active {
@@ -519,6 +519,7 @@ header .icons-container {
 
 header .icons-container p {
   color: #fff;
+  font-weight: bold;
   font-size: 12px;
   margin-top: 5px;
 }
@@ -1120,6 +1121,10 @@ header .icons a:hover{
   header{
     position: static;
     background-color: var(--light-color);
+  }
+
+  header .icons-container p {
+    font-weight: normal;
   }
 }
 
